--- a/src/src/Dashboard/Components/Dashboard/Dashboard.module.css
+++ b/src/src/Dashboard/Components/Dashboard/Dashboard.module.css
@@ -1,20 +1,47 @@
 .dashboardcards {
   display: flex;
-  height: 100%;
+  flex-wrap: wrap;
+  height: auto;
   justify-content: center;
   align-items: flex-start;
+  color: rgb(22, 31, 106);
 }
 .dashboardbody {
   padding: 10px;
-  height: 84vh !important;
-  /* border: 2px solid red !important; */
+  min-height: 100vh;
+  /* border: 2px solid red !important;height: auto !important; */
 }
 .singlecard_das {
   width: 400px;
-  height: 200px;
+  height: 100px;
+  display: flex;
+  justify-content: space-between;
   background-color: white;
-  border-radius: 10px;
+  border-radius: 5px;
   margin: 20px;
   padding: 10px;
-  box-shadow: 0 3px 7px rgba(0, 0, 0, 0.3);
+  box-shadow: 0 3px 2px rgba(0, 0, 0, 0.1);
+}
+.info {
+  /* border: 2px solid red; */
+  display: flex;
+  justify-content: flex-start;
+  align-items: center;
+  flex-direction: column;
+}
+.info span {
+  font-size: 30px;
+}
+/* p {
+  border: 2px solid olivedrab;
+} */
+.amount {
+  /* border: 2px solid black; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 60px;
+  height: 70px;
+  color: rgb(22, 31, 106) !important ;
+  /* background-color: #1abd66; */
 }
